--- a/grub.cfg
+++ b/grub.cfg
@@ -30,8 +30,8 @@ probe --set archiso_img_dev_uuid --fs-uuid "${archiso_img_dev}"
 
 
 menuentry "Linux Hex" {
-    linux /lhex/vmlinuz boot=live img_dev=UUID=${archiso_img_dev_uuid} img_loop="${iso_path}" init="/sbin/init"
-    initrd /lhex/initramfs.img
+    linux /vmlinuz
+    initrd /initramfs.img
     boot
 }
 
