--- a/grub.cfg
+++ b/grub.cfg
@@ -30,8 +30,7 @@ probe --set archiso_img_dev_uuid --fs-uuid "${archiso_img_dev}"
 
 
 menuentry "Linux Hex" {
-    linux /vmlinuz
-    initrd /initramfs.img
+    linux /boot/bzImage init=/sbin/init
+    initrd /boot/initrd
     boot
 }
-
